[tool.poetry]
name = "django-image-cloak"
version = "0.1.0"
description = "Django model field for image cloaking using the Fawkes engine"
authors = ["Matt Strayer <git@mattstrayer.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.8"
django = "^3.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
